force.com/CALM/src/objects/Event_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>al__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Event Attributes (Action)</relationshipLabel>
        <relationshipName>Event_Attributes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>k__c</fullName>
        <description>The key for this attribute.</description>
        <inlineHelpText>The key for this attribute.</inlineHelpText>
        <label>Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>u__c</fullName>
        <description>The ID of the Action that this attribute corresponds to.</description>
        <inlineHelpText>The ID of the Action that this attribute corresponds to.</inlineHelpText>
        <label>Action ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>v__c</fullName>
        <description>The value for this attribute.</description>
        <inlineHelpText>The value for this attribute.</inlineHelpText>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Event Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DetailedAttributes</fullName>
        <columns>u__c</columns>
        <columns>k__c</columns>
        <columns>v__c</columns>
        <columns>al__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed Attributes</label>
    </listViews>
    <nameField>
        <label>Event Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>